--- a/.azure-pipelines/generate-auth-module-template.yml
+++ b/.azure-pipelines/generate-auth-module-template.yml
@@ -43,7 +43,7 @@ jobs:
      KeyVaultName: $(KEYVAULT)
      SecretsFilter: '*'
      RunAsPreJob: true
-    
+
   - task: PowerShell@2
     displayName: 'Install Test Certificate'
     inputs:
@@ -56,23 +56,6 @@ jobs:
           $store.Open([System.Security.Cryptography.X509Certificates.OpenFlags]::ReadWrite)
           $store.AddRange($certCollection)
           $store.Close()
-
-  - task: PowerShell@2
-    displayName: 'Generate and Build Auth Module'
-    inputs:
-      targetType: 'inline'
-      pwsh: true
-      script: |
-        Write-Host $(BUILDNUMBER)
-        pwsh $(System.DefaultWorkingDirectory)/tools/GenerateAuthenticationModule.ps1 -ArtifactsLocation $(Build.ArtifactStagingDirectory) -Build -ModulePreviewNumber $(BUILDNUMBER) -Test
-
-  - task: DotNetCoreCLI@2
-    displayName: 'Run: Enabled Tests'
-    inputs:
-      command: 'test'
-      publishTestResults: true
-      projects: '$(System.DefaultWorkingDirectory)/src/Authentication/Authentication.Test/*.csproj'
-      testRunTitle: 'Run Enabled Tests'
 
   - task: RoslynAnalyzers@2
     inputs:
@@ -92,9 +75,18 @@ jobs:
     inputs:
       targetType: 'inline'
       pwsh: true
+      failOnStderr: true
       script: |
         Write-Host $(BUILDNUMBER)
-        pwsh $(System.DefaultWorkingDirectory)/tools/GenerateAuthenticationModule.ps1 -ArtifactsLocation $(Build.ArtifactStagingDirectory) -Build -EnableSigning -ModulePreviewNumber $(BUILDNUMBER) -RepositoryName "LocalNugetFeed"
+        pwsh $(System.DefaultWorkingDirectory)/tools/GenerateAuthenticationModule.ps1 -ArtifactsLocation $(Build.ArtifactStagingDirectory) -Build -EnableSigning -Test -ModulePreviewNumber $(BUILDNUMBER) -RepositoryName "LocalNugetFeed"
+
+  - task: DotNetCoreCLI@2
+    displayName: 'Run: Enabled Tests'
+    inputs:
+      command: 'test'
+      publishTestResults: true
+      projects: '$(System.DefaultWorkingDirectory)/src/Authentication/Authentication.Test/*.csproj'
+      testRunTitle: 'Run Enabled Tests'
 
   - task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
     displayName: 'ESRP DLL Strong Name (Graph Auth Module)'
@@ -123,7 +115,7 @@ jobs:
            }
        ]
       SessionTimeout: 20
-  
+
   - task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
     displayName: 'ESRP DLL CodeSigning (Graph Auth Module)'
     enabled: true
@@ -172,7 +164,7 @@ jobs:
            }
        ]
       SessionTimeout: 20
-  
+
   - task: PowerShell@2
     displayName: 'Pack Auth Module'
     inputs:
@@ -180,7 +172,7 @@ jobs:
       pwsh: true
       script: |
         pwsh $(System.DefaultWorkingDirectory)/tools/PackModule.ps1 -Module $(AUTH_MODULE_NAME) -ArtifactsLocation $(Build.ArtifactStagingDirectory)
-  
+
   - task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
     displayName: 'ESRP NuGet CodeSigning'
     enabled: true
@@ -215,7 +207,7 @@ jobs:
       packagesToPush: '$(Build.ArtifactStagingDirectory)\$(AUTH_MODULE_NAME)\Microsoft.Graph.$(AUTH_MODULE_NAME)*.nupkg'
       publishVstsFeed: '0985d294-5762-4bc2-a565-161ef349ca3e/edc337b9-e5ea-49dd-a2cb-e8d66668ca57'
       allowPackageConflicts: true
-    
+
   - task: PublishTestResults@2
     inputs:
       testResultsFormat: 'NUnit'
