--- a/.azure-pipelines/generate-auth-module-template.yml
+++ b/.azure-pipelines/generate-auth-module-template.yml
@@ -57,6 +57,23 @@ jobs:
           $store.AddRange($certCollection)
           $store.Close()
 
+  - task: PowerShell@2
+    displayName: 'Generate and Build Auth Module'
+    inputs:
+      targetType: 'inline'
+      pwsh: true
+      script: |
+        Write-Host $(BUILDNUMBER)
+        . $(System.DefaultWorkingDirectory)/tools/GenerateAuthenticationModule.ps1 -ArtifactsLocation $(Build.ArtifactStagingDirectory) -Build -EnableSigning -Test -ModulePreviewNumber $(BUILDNUMBER) -RepositoryName "LocalNugetFeed"
+
+  - task: DotNetCoreCLI@2
+    displayName: 'Run: Enabled Tests'
+    inputs:
+      command: 'test'
+      publishTestResults: true
+      projects: '$(System.DefaultWorkingDirectory)/src/Authentication/Authentication.Test/*.csproj'
+      testRunTitle: 'Run Enabled Tests'
+
   - task: RoslynAnalyzers@2
     inputs:
         userProvideBuildInfo: 'msBuildInfo'
@@ -69,24 +86,6 @@ jobs:
     inputs:
         Files: '$(System.DefaultWorkingDirectory)//**//Microsoft.Graph.Authentication.dll;$(System.DefaultWorkingDirectory)//**//Microsoft.Graph.Authentication.exe'
         continueOnError: true
-
-  - task: PowerShell@2
-    displayName: 'Generate and Build Auth Module'
-    inputs:
-      targetType: 'inline'
-      pwsh: true
-      failOnStderr: true
-      script: |
-        Write-Host $(BUILDNUMBER)
-        pwsh $(System.DefaultWorkingDirectory)/tools/GenerateAuthenticationModule.ps1 -ArtifactsLocation $(Build.ArtifactStagingDirectory) -Build -EnableSigning -Test -ModulePreviewNumber $(BUILDNUMBER) -RepositoryName "LocalNugetFeed"
-
-  - task: DotNetCoreCLI@2
-    displayName: 'Run: Enabled Tests'
-    inputs:
-      command: 'test'
-      publishTestResults: true
-      projects: '$(System.DefaultWorkingDirectory)/src/Authentication/Authentication.Test/*.csproj'
-      testRunTitle: 'Run Enabled Tests'
 
   - task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
     displayName: 'ESRP DLL Strong Name (Graph Auth Module)'
@@ -171,7 +170,7 @@ jobs:
       targetType: 'inline'
       pwsh: true
       script: |
-        pwsh $(System.DefaultWorkingDirectory)/tools/PackModule.ps1 -Module $(AUTH_MODULE_NAME) -ArtifactsLocation $(Build.ArtifactStagingDirectory)
+        . $(System.DefaultWorkingDirectory)/tools/PackModule.ps1 -Module $(AUTH_MODULE_NAME) -ArtifactsLocation $(Build.ArtifactStagingDirectory)
 
   - task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
     displayName: 'ESRP NuGet CodeSigning'
