--- a/.azure-pipelines/generate-modules-template.yml
+++ b/.azure-pipelines/generate-modules-template.yml
@@ -58,7 +58,7 @@ jobs:
       pwsh: true
       script: |
         Write-Host $(BUILDNUMBER)
-        pwsh $(System.DefaultWorkingDirectory)/tools/GenerateAuthenticationModule.ps1 -ArtifactsLocation $(Build.ArtifactStagingDirectory) -Build -EnableSigning -BuildWhenEqual -ModulePreviewNumber $(BUILDNUMBER) -RepositoryName "LocalNugetFeed"
+        pwsh $(System.DefaultWorkingDirectory)/tools/GenerateAuthenticationModule.ps1 -ArtifactsLocation $(Build.ArtifactStagingDirectory) -Build -EnableSigning -BuildWhenEqual -ModulePreviewNumber $(BUILDNUMBER) -RepositoryName "LocalNugetFeed" -Test
 
   - task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
     displayName: 'ESRP DLL Strong Name (Graph Auth Module)'
