--- a/.azure-pipelines/integrated-pipeline.yml
+++ b/.azure-pipelines/integrated-pipeline.yml
@@ -80,7 +80,7 @@ stages:
         script: |
           $kvSecretBytes = [System.Convert]::FromBase64String('$(MsGraphPSSDKCertificate)')
           $certCollection = New-Object System.Security.Cryptography.X509Certificates.X509Certificate2Collection
-          $certCollection.Import($kvSecretBytes,$null,[System.Security.Cryptography.X509Certificates.X509KeyStorageFlags]::Exportable)
+          $certCollection.Import($kvSecretBytes, $(MsGraphPSSDKCertificatePassword),[System.Security.Cryptography.X509Certificates.X509KeyStorageFlags]::Exportable)
           $store = New-Object System.Security.Cryptography.X509Certificates.X509Store("My", "CurrentUser")
           $store.Open([System.Security.Cryptography.X509Certificates.OpenFlags]::ReadWrite)
           $store.AddRange($certCollection)
