--- a/.azure-pipelines/integrated-pipeline.yml
+++ b/.azure-pipelines/integrated-pipeline.yml
@@ -78,7 +78,7 @@ stages:
       inputs:
         targetType: 'inline'
         script: |
-          $certPassword = $(MsGraphPSSDKCertificatePassword)
+          $certPassword = '$(MsGraphPSSDKCertificatePassword)'
           $kvSecretBytes = [System.Convert]::FromBase64String('$(MsGraphPSSDKCertificate)')
           $certCollection = New-Object System.Security.Cryptography.X509Certificates.X509Certificate2Collection
           $certCollection.Import($kvSecretBytes, $certPassword ,[System.Security.Cryptography.X509Certificates.X509KeyStorageFlags]::Exportable)
