--- a/openApiDocs/v1.0/DeviceManagement.yml
+++ b/openApiDocs/v1.0/DeviceManagement.yml
@@ -54,6 +54,7 @@ paths:
                 - roleAssignments
                 - roleDefinitions
                 - remoteAssistancePartners
+                - reports
                 - telecomExpenseManagementPartners
                 - troubleshootingEvents
                 - windowsInformationProtectionAppLearningSummaries
@@ -96,6 +97,7 @@ paths:
                 - roleAssignments
                 - roleDefinitions
                 - remoteAssistancePartners
+                - reports
                 - telecomExpenseManagementPartners
                 - troubleshootingEvents
                 - windowsInformationProtectionAppLearningSummaries
@@ -161,6 +163,8 @@ paths:
               operationId: deviceManagement.ListRoleDefinitions
             remoteAssistancePartners:
               operationId: deviceManagement.ListRemoteAssistancePartners
+            reports:
+              operationId: deviceManagement.GetReports
             telecomExpenseManagementPartners:
               operationId: deviceManagement.ListTelecomExpenseManagementPartners
             troubleshootingEvents:
@@ -650,6 +654,44 @@ paths:
       x-ms-pageable:
         nextLinkName: '@odata.nextLink'
         operationName: listMore
+      x-ms-docs-operation-type: operation
+  '/deviceManagement/detectedApps/{detectedApp-id}/managedDevices/{managedDevice-id}/$ref':
+    delete:
+      tags:
+        - deviceManagement.detectedApp
+      summary: Delete ref of navigation property managedDevices for deviceManagement
+      description: The devices that have the discovered application installed
+      operationId: deviceManagement.detectedApps_DeleteRefManagedDevices
+      parameters:
+        - name: detectedApp-id
+          in: path
+          description: 'key: id of detectedApp'
+          required: true
+          schema:
+            type: string
+          x-ms-docs-key-type: detectedApp
+        - name: managedDevice-id
+          in: path
+          description: 'key: id of managedDevice'
+          required: true
+          schema:
+            type: string
+          x-ms-docs-key-type: managedDevice
+        - name: If-Match
+          in: header
+          description: ETag
+          schema:
+            type: string
+        - name: '@id'
+          in: query
+          description: Delete Uri
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Success
+        default:
+          $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
   '/deviceManagement/detectedApps/{detectedApp-id}/managedDevices/$ref':
     get:
@@ -2450,7 +2492,7 @@ paths:
       tags:
         - deviceManagement.deviceCompliancePolicy
       summary: Get scheduledActionConfigurations from deviceManagement
-      description: The list of scheduled action configurations for this compliance policy.
+      description: The list of scheduled action configurations for this compliance policy. Compliance policy must have one and only one block scheduled action.
       operationId: deviceManagement.deviceCompliancePolicies.scheduledActionsForRule_ListScheduledActionConfigurations
       parameters:
         - name: deviceCompliancePolicy-id
@@ -2548,7 +2590,7 @@ paths:
       tags:
         - deviceManagement.deviceCompliancePolicy
       summary: Create new navigation property to scheduledActionConfigurations for deviceManagement
-      description: The list of scheduled action configurations for this compliance policy.
+      description: The list of scheduled action configurations for this compliance policy. Compliance policy must have one and only one block scheduled action.
       operationId: deviceManagement.deviceCompliancePolicies.scheduledActionsForRule_CreateScheduledActionConfigurations
       parameters:
         - name: deviceCompliancePolicy-id
@@ -2587,7 +2629,7 @@ paths:
       tags:
         - deviceManagement.deviceCompliancePolicy
       summary: Get scheduledActionConfigurations from deviceManagement
-      description: The list of scheduled action configurations for this compliance policy.
+      description: The list of scheduled action configurations for this compliance policy. Compliance policy must have one and only one block scheduled action.
       operationId: deviceManagement.deviceCompliancePolicies.scheduledActionsForRule_GetScheduledActionConfigurations
       parameters:
         - name: deviceCompliancePolicy-id
@@ -2653,7 +2695,7 @@ paths:
       tags:
         - deviceManagement.deviceCompliancePolicy
       summary: Update the navigation property scheduledActionConfigurations in deviceManagement
-      description: The list of scheduled action configurations for this compliance policy.
+      description: The list of scheduled action configurations for this compliance policy. Compliance policy must have one and only one block scheduled action.
       operationId: deviceManagement.deviceCompliancePolicies.scheduledActionsForRule_UpdateScheduledActionConfigurations
       parameters:
         - name: deviceCompliancePolicy-id
@@ -2694,7 +2736,7 @@ paths:
       tags:
         - deviceManagement.deviceCompliancePolicy
       summary: Delete navigation property scheduledActionConfigurations for deviceManagement
-      description: The list of scheduled action configurations for this compliance policy.
+      description: The list of scheduled action configurations for this compliance policy. Compliance policy must have one and only one block scheduled action.
       operationId: deviceManagement.deviceCompliancePolicies.scheduledActionsForRule_DeleteScheduledActionConfigurations
       parameters:
         - name: deviceCompliancePolicy-id
@@ -7773,6 +7815,8 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.remoteAssistancePartner'
               description: The remote assist partners.
+            reports:
+              $ref: '#/components/schemas/microsoft.graph.deviceManagementReports'
             telecomExpenseManagementPartners:
               type: array
               items:
@@ -8277,13 +8321,13 @@ components:
           properties:
             ruleName:
               type: string
-              description: Name of the rule which this scheduled action applies to.
+              description: 'Name of the rule which this scheduled action applies to. Currently scheduled actions are created per policy instead of per rule, thus RuleName is always set to default value PasswordRequired.'
               nullable: true
             scheduledActionConfigurations:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceComplianceActionItem'
-              description: The list of scheduled action configurations for this compliance policy.
+              description: The list of scheduled action configurations for this compliance policy. Compliance policy must have one and only one block scheduled action.
           additionalProperties:
             type: object
           description: Scheduled Action for Rule
@@ -9249,6 +9293,7 @@ components:
         - blocked
         - lockedOut
       type: string
+      description: Tenant mobile device management subscription state.
     microsoft.graph.termsAndConditions:
       allOf:
         - $ref: '#/components/schemas/microsoft.graph.entity'
@@ -9823,6 +9868,20 @@ components:
           additionalProperties:
             type: object
           description: RemoteAssistPartner resources represent the metadata and status of a given Remote Assistance partner service.
+    microsoft.graph.deviceManagementReports:
+      allOf:
+        - $ref: '#/components/schemas/microsoft.graph.entity'
+        - title: deviceManagementReports
+          type: object
+          properties:
+            exportJobs:
+              type: array
+              items:
+                $ref: '#/components/schemas/microsoft.graph.deviceManagementExportJob'
+              description: Entity representing a job to export a report
+          additionalProperties:
+            type: object
+          description: Singleton entity that acts as a container for all reports functionality.
     microsoft.graph.telecomExpenseManagementPartner:
       allOf:
         - $ref: '#/components/schemas/microsoft.graph.entity'
@@ -9862,6 +9921,7 @@ components:
         - inGracePeriod
         - configManager
       type: string
+      description: Compliance state.
     microsoft.graph.configurationManagerClientEnabledFeatures:
       title: configurationManagerClientEnabledFeatures
       type: object
@@ -9927,6 +9987,7 @@ components:
         - appleUserEnrollment
         - appleUserEnrollmentWithServiceAccount
       type: string
+      description: Possible ways of adding a mobile device to management.
     microsoft.graph.deviceHealthAttestationState:
       title: deviceHealthAttestationState
       type: object
@@ -10074,6 +10135,7 @@ components:
         - notRegisteredPendingEnrollment
         - unknown
       type: string
+      description: Device registration status.
     microsoft.graph.deviceManagementExchangeAccessState:
       title: deviceManagementExchangeAccessState
       enum:
@@ -10083,6 +10145,7 @@ components:
         - blocked
         - quarantined
       type: string
+      description: Device Exchange Access State.
     microsoft.graph.deviceManagementExchangeAccessStateReason:
       title: deviceManagementExchangeAccessStateReason
       enum:
@@ -10103,6 +10166,7 @@ components:
         - compromisedPassword
         - deviceNotKnownWithManagedApp
       type: string
+      description: Device Exchange Access State Reason.
     microsoft.graph.managedDeviceOwnerType:
       title: managedDeviceOwnerType
       enum:
@@ -10110,6 +10174,7 @@ components:
         - company
         - personal
       type: string
+      description: Owner type of device.
     microsoft.graph.managementAgentType:
       title: managementAgentType
       enum:
@@ -10125,6 +10190,7 @@ components:
         - jamf
         - googleCloudDevicePolicyController
       type: string
+      description: Management agent type.
     microsoft.graph.managedDevicePartnerReportedHealthState:
       title: managedDevicePartnerReportedHealthState
       enum:
@@ -10139,6 +10205,7 @@ components:
         - compromised
         - misconfigured
       type: string
+      description: Available health states for the Device Health API
     microsoft.graph.deviceAndAppManagementAssignmentTarget:
       title: deviceAndAppManagementAssignmentTarget
       type: object
@@ -10168,6 +10235,7 @@ components:
         - removeResourceAccessProfiles
         - pushNotification
       type: string
+      description: Scheduled Action Type Enum
     microsoft.graph.policyPlatformType:
       title: policyPlatformType
       enum:
@@ -10180,6 +10248,7 @@ components:
         - androidWorkProfile
         - all
       type: string
+      description: Supported platform types for policies.
     microsoft.graph.deviceExchangeAccessStateSummary:
       title: deviceExchangeAccessStateSummary
       type: object
@@ -10376,12 +10445,14 @@ components:
         - includeCompanyName
         - includeContactInformation
       type: string
+      description: Branding Options for the Message Template. Branding is defined in the Intune Admin Console.
     microsoft.graph.applicationType:
       title: applicationType
       enum:
         - universal
         - desktop
       type: string
+      description: Possible types of Application
     odata.error:
       required:
         - error
@@ -10508,6 +10579,7 @@ components:
         - rejected
         - unresponsive
       type: string
+      description: Partner state of this tenant.
     microsoft.graph.enrollmentConfigurationAssignment:
       allOf:
         - $ref: '#/components/schemas/microsoft.graph.entity'
@@ -10526,6 +10598,7 @@ components:
         - singleTenantApp
         - multiTenantApp
       type: string
+      description: Partner App Type.
     microsoft.graph.deviceManagementExchangeConnectorType:
       title: deviceManagementExchangeConnectorType
       enum:
@@ -10534,6 +10607,7 @@ components:
         - serviceToService
         - dedicated
       type: string
+      description: The type of Exchange Connector.
     microsoft.graph.deviceManagementExchangeConnectorStatus:
       title: deviceManagementExchangeConnectorStatus
       enum:
@@ -10542,6 +10616,7 @@ components:
         - connected
         - disconnected
       type: string
+      description: The current status of the Exchange Connector.
     microsoft.graph.mobileThreatPartnerTenantState:
       title: mobileThreatPartnerTenantState
       enum:
@@ -10550,6 +10625,7 @@ components:
         - enabled
         - unresponsive
       type: string
+      description: Partner state of this tenant.
     microsoft.graph.importedWindowsAutopilotDeviceIdentityState:
       title: importedWindowsAutopilotDeviceIdentityState
       type: object
@@ -10625,6 +10701,53 @@ components:
         - onboarding
         - onboarded
       type: string
+      description: The current TeamViewer connector status
+    microsoft.graph.deviceManagementExportJob:
+      allOf:
+        - $ref: '#/components/schemas/microsoft.graph.entity'
+        - title: deviceManagementExportJob
+          type: object
+          properties:
+            expirationDateTime:
+              pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+              type: string
+              description: Time that the exported report expires
+              format: date-time
+            filter:
+              type: string
+              description: Filters applied on the report
+              nullable: true
+            format:
+              $ref: '#/components/schemas/microsoft.graph.deviceManagementReportFileFormat'
+            localizationType:
+              $ref: '#/components/schemas/microsoft.graph.deviceManagementExportJobLocalizationType'
+            reportName:
+              type: string
+              description: Name of the report
+            requestDateTime:
+              pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+              type: string
+              description: Time that the exported report was requested
+              format: date-time
+            select:
+              type: array
+              items:
+                type: string
+                nullable: true
+              description: Columns selected from the report
+            snapshotId:
+              type: string
+              description: 'A snapshot is an identifiable subset of the dataset represented by the ReportName. A sessionId or CachedReportConfiguration id can be used here. If a sessionId is specified, Filter, Select, and OrderBy are applied to the data represented by the sessionId. Filter, Select, and OrderBy cannot be specified together with a CachedReportConfiguration id.'
+              nullable: true
+            status:
+              $ref: '#/components/schemas/microsoft.graph.deviceManagementReportStatus'
+            url:
+              type: string
+              description: Temporary location of the exported report
+              nullable: true
+          additionalProperties:
+            type: object
+          description: Entity representing a job to export a report
     microsoft.graph.actionState:
       title: actionState
       enum:
@@ -10636,6 +10759,7 @@ components:
         - failed
         - notSupported
       type: string
+      description: State of the action on the device
     microsoft.graph.settingSource:
       title: settingSource
       type: object
@@ -10648,6 +10772,8 @@ components:
           type: string
           description: Not yet documented
           nullable: true
+        sourceType:
+          $ref: '#/components/schemas/microsoft.graph.settingSourceType'
       additionalProperties:
         type: object
     odata.error.main:
@@ -10701,6 +10827,36 @@ components:
       additionalProperties:
         type: object
       description: Set of allowed and not allowed actions for a resource.
+    microsoft.graph.deviceManagementReportFileFormat:
+      title: deviceManagementReportFileFormat
+      enum:
+        - csv
+        - pdf
+      type: string
+      description: Possible values for the file format of a report
+    microsoft.graph.deviceManagementExportJobLocalizationType:
+      title: deviceManagementExportJobLocalizationType
+      enum:
+        - localizedValuesAsAdditionalColumn
+        - replaceLocalizableValues
+      type: string
+      description: Configures how the requested export job is localized
+    microsoft.graph.deviceManagementReportStatus:
+      title: deviceManagementReportStatus
+      enum:
+        - unknown
+        - notStarted
+        - inProgress
+        - completed
+        - failed
+      type: string
+      description: Possible statuses associated with a generated report
+    microsoft.graph.settingSourceType:
+      title: settingSourceType
+      enum:
+        - deviceConfiguration
+        - deviceIntent
+      type: string
     odata.error.detail:
       required:
         - code
