--- a/openApiDocs/v1.0/Reports.yml
+++ b/openApiDocs/v1.0/Reports.yml
@@ -1156,6 +1156,327 @@ paths:
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
+  /deviceManagement/reports:
+    get:
+      tags:
+        - deviceManagement.deviceManagementReports
+      summary: Get reports from deviceManagement
+      description: Reports singleton
+      operationId: deviceManagement_GetReports
+      parameters:
+        - name: $select
+          in: query
+          description: Select properties to be returned
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              enum:
+                - id
+                - exportJobs
+              type: string
+        - name: $expand
+          in: query
+          description: Expand related entities
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              enum:
+                - '*'
+                - exportJobs
+              type: string
+      responses:
+        '200':
+          description: Retrieved navigation property
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.deviceManagementReports'
+          links:
+            exportJobs:
+              operationId: deviceManagement.Reports.ListExportJobs
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+    patch:
+      tags:
+        - deviceManagement.deviceManagementReports
+      summary: Update the navigation property reports in deviceManagement
+      description: Reports singleton
+      operationId: deviceManagement_UpdateReports
+      requestBody:
+        description: New navigation property values
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/microsoft.graph.deviceManagementReports'
+        required: true
+      responses:
+        '204':
+          description: Success
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+    delete:
+      tags:
+        - deviceManagement.deviceManagementReports
+      summary: Delete navigation property reports for deviceManagement
+      description: Reports singleton
+      operationId: deviceManagement_DeleteReports
+      parameters:
+        - name: If-Match
+          in: header
+          description: ETag
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Success
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+  /deviceManagement/reports/exportJobs:
+    get:
+      tags:
+        - deviceManagement.deviceManagementReports
+      summary: Get exportJobs from deviceManagement
+      description: Entity representing a job to export a report
+      operationId: deviceManagement.reports_ListExportJobs
+      parameters:
+        - $ref: '#/components/parameters/top'
+        - $ref: '#/components/parameters/skip'
+        - $ref: '#/components/parameters/search'
+        - $ref: '#/components/parameters/filter'
+        - $ref: '#/components/parameters/count'
+        - name: $orderby
+          in: query
+          description: Order items by property values
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              enum:
+                - id
+                - id desc
+                - expirationDateTime
+                - expirationDateTime desc
+                - filter
+                - filter desc
+                - format
+                - format desc
+                - localizationType
+                - localizationType desc
+                - reportName
+                - reportName desc
+                - requestDateTime
+                - requestDateTime desc
+                - select
+                - select desc
+                - snapshotId
+                - snapshotId desc
+                - status
+                - status desc
+                - url
+                - url desc
+              type: string
+        - name: $select
+          in: query
+          description: Select properties to be returned
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              enum:
+                - id
+                - expirationDateTime
+                - filter
+                - format
+                - localizationType
+                - reportName
+                - requestDateTime
+                - select
+                - snapshotId
+                - status
+                - url
+              type: string
+        - name: $expand
+          in: query
+          description: Expand related entities
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              enum:
+                - '*'
+              type: string
+      responses:
+        '200':
+          description: Retrieved navigation property
+          content:
+            application/json:
+              schema:
+                title: Collection of deviceManagementExportJob
+                type: object
+                properties:
+                  value:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/microsoft.graph.deviceManagementExportJob'
+                  '@odata.nextLink':
+                    type: string
+                additionalProperties:
+                  type: object
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-pageable:
+        nextLinkName: '@odata.nextLink'
+        operationName: listMore
+      x-ms-docs-operation-type: operation
+    post:
+      tags:
+        - deviceManagement.deviceManagementReports
+      summary: Create new navigation property to exportJobs for deviceManagement
+      description: Entity representing a job to export a report
+      operationId: deviceManagement.reports_CreateExportJobs
+      requestBody:
+        description: New navigation property
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/microsoft.graph.deviceManagementExportJob'
+        required: true
+      responses:
+        '201':
+          description: Created navigation property.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.deviceManagementExportJob'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+  '/deviceManagement/reports/exportJobs/{deviceManagementExportJob-id}':
+    get:
+      tags:
+        - deviceManagement.deviceManagementReports
+      summary: Get exportJobs from deviceManagement
+      description: Entity representing a job to export a report
+      operationId: deviceManagement.reports_GetExportJobs
+      parameters:
+        - name: deviceManagementExportJob-id
+          in: path
+          description: 'key: id of deviceManagementExportJob'
+          required: true
+          schema:
+            type: string
+          x-ms-docs-key-type: deviceManagementExportJob
+        - name: $select
+          in: query
+          description: Select properties to be returned
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              enum:
+                - id
+                - expirationDateTime
+                - filter
+                - format
+                - localizationType
+                - reportName
+                - requestDateTime
+                - select
+                - snapshotId
+                - status
+                - url
+              type: string
+        - name: $expand
+          in: query
+          description: Expand related entities
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              enum:
+                - '*'
+              type: string
+      responses:
+        '200':
+          description: Retrieved navigation property
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.deviceManagementExportJob'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+    patch:
+      tags:
+        - deviceManagement.deviceManagementReports
+      summary: Update the navigation property exportJobs in deviceManagement
+      description: Entity representing a job to export a report
+      operationId: deviceManagement.reports_UpdateExportJobs
+      parameters:
+        - name: deviceManagementExportJob-id
+          in: path
+          description: 'key: id of deviceManagementExportJob'
+          required: true
+          schema:
+            type: string
+          x-ms-docs-key-type: deviceManagementExportJob
+      requestBody:
+        description: New navigation property values
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/microsoft.graph.deviceManagementExportJob'
+        required: true
+      responses:
+        '204':
+          description: Success
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+    delete:
+      tags:
+        - deviceManagement.deviceManagementReports
+      summary: Delete navigation property exportJobs for deviceManagement
+      description: Entity representing a job to export a report
+      operationId: deviceManagement.reports_DeleteExportJobs
+      parameters:
+        - name: deviceManagementExportJob-id
+          in: path
+          description: 'key: id of deviceManagementExportJob'
+          required: true
+          schema:
+            type: string
+          x-ms-docs-key-type: deviceManagementExportJob
+        - name: If-Match
+          in: header
+          description: ETag
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Success
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
   /reports:
     get:
       tags:
@@ -4507,6 +4828,66 @@ components:
               nullable: true
           additionalProperties:
             type: object
+    microsoft.graph.deviceManagementReports:
+      allOf:
+        - $ref: '#/components/schemas/microsoft.graph.entity'
+        - title: deviceManagementReports
+          type: object
+          properties:
+            exportJobs:
+              type: array
+              items:
+                $ref: '#/components/schemas/microsoft.graph.deviceManagementExportJob'
+              description: Entity representing a job to export a report
+          additionalProperties:
+            type: object
+          description: Singleton entity that acts as a container for all reports functionality.
+    microsoft.graph.deviceManagementExportJob:
+      allOf:
+        - $ref: '#/components/schemas/microsoft.graph.entity'
+        - title: deviceManagementExportJob
+          type: object
+          properties:
+            expirationDateTime:
+              pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+              type: string
+              description: Time that the exported report expires
+              format: date-time
+            filter:
+              type: string
+              description: Filters applied on the report
+              nullable: true
+            format:
+              $ref: '#/components/schemas/microsoft.graph.deviceManagementReportFileFormat'
+            localizationType:
+              $ref: '#/components/schemas/microsoft.graph.deviceManagementExportJobLocalizationType'
+            reportName:
+              type: string
+              description: Name of the report
+            requestDateTime:
+              pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+              type: string
+              description: Time that the exported report was requested
+              format: date-time
+            select:
+              type: array
+              items:
+                type: string
+                nullable: true
+              description: Columns selected from the report
+            snapshotId:
+              type: string
+              description: 'A snapshot is an identifiable subset of the dataset represented by the ReportName. A sessionId or CachedReportConfiguration id can be used here. If a sessionId is specified, Filter, Select, and OrderBy are applied to the data represented by the sessionId. Filter, Select, and OrderBy cannot be specified together with a CachedReportConfiguration id.'
+              nullable: true
+            status:
+              $ref: '#/components/schemas/microsoft.graph.deviceManagementReportStatus'
+            url:
+              type: string
+              description: Temporary location of the exported report
+              nullable: true
+          additionalProperties:
+            type: object
+          description: Entity representing a job to export a report
     microsoft.graph.reportRoot:
       allOf:
         - $ref: '#/components/schemas/microsoft.graph.entity'
@@ -4623,11 +5004,11 @@ components:
       properties:
         key:
           type: string
-          description: Key.
+          description: 'Contains the name of the field that a value is associated with. When a sign in or domain hint is included in the sign-in request, corresponding fields are included as key-value pairs. Possible keys: Login hint present, Domain hint present.'
           nullable: true
         value:
           type: string
-          description: Value.
+          description: Contains the corresponding value for the specified key. The value is true if a sign in hint was included in the sign-in request; otherwise false. The value is true if a domain hint was included in the sign-in request; otherwise false.
           nullable: true
       additionalProperties:
         type: object
@@ -4945,6 +5326,30 @@ components:
           nullable: true
       additionalProperties:
         type: object
+    microsoft.graph.deviceManagementReportFileFormat:
+      title: deviceManagementReportFileFormat
+      enum:
+        - csv
+        - pdf
+      type: string
+      description: Possible values for the file format of a report
+    microsoft.graph.deviceManagementExportJobLocalizationType:
+      title: deviceManagementExportJobLocalizationType
+      enum:
+        - localizedValuesAsAdditionalColumn
+        - replaceLocalizableValues
+      type: string
+      description: Configures how the requested export job is localized
+    microsoft.graph.deviceManagementReportStatus:
+      title: deviceManagementReportStatus
+      enum:
+        - unknown
+        - notStarted
+        - inProgress
+        - completed
+        - failed
+      type: string
+      description: Possible statuses associated with a generated report
     microsoft.graph.printUsage:
       allOf:
         - $ref: '#/components/schemas/microsoft.graph.entity'
